# lantern

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  homebrew-install.yml  release.yml
apps/daemon/: Cargo.toml
apps/daemon/src/: code_review.rs  main.rs  plan.rs
apps/daemon/tests/: protocol.rs
apps/explorer/: Cargo.toml
apps/explorer/src/: lib.rs  main.rs
apps/git-rail/: Cargo.toml  README.md
apps/git-rail/src/: lib.rs  main.rs
apps/git-rail/tests/: journey.rs
crates/diagnostics/: Cargo.toml
crates/policy-engine/: Cargo.toml
crates/protocol/: Cargo.toml
docs/: CODEX_AGENT_DRIVER.md  CREDENTIALS.md  CURRENT_STATE.md  DIAGNOSTICS.md  ENGINEERING_STANDARD.md  EVALUATION_STRATEGY.md  EXTERNAL_EDIT_JOURNEY.md  FIRST_USEFUL_SLICE.md  GUIDED_BUILD.md  HELIX_TERMINAL_SPIKE.md  IMPLEMENTATION_PLAN.md  LIVE_COLLABORATION.md  PHASE_0_DOSSIER.md  PRODUCT_BRIEF.md  PRODUCT_CONSTITUTION.md  REFERENCE_REPOSITORIES.md  RELEASING.md
docs/acceptance/: 2026-07-18-call-hierarchy-spike.md  2026-07-18-cold-grounding-status.md  2026-07-18-evidence-first-lsp.md  2026-07-18-external-edit-journey.md  2026-07-18-focused-git-command-spike.md  2026-07-18-go-call-hierarchy.md  2026-07-18-grounded-wait-status.md  2026-07-18-incremental-semantic-index.md  2026-07-18-live-trace-baseline.md  2026-07-18-persistent-pi.md  2026-07-18-pi-sdk-tool-control-spike.md  2026-07-18-retrieval-baseline.md  2026-07-18-script-language-call-hierarchy.md  2026-07-18-semantic-evidence-grouping.md  2026-07-18-semantic-refresh.md  2026-07-18-semantic-retrieval-spike.md  2026-07-19-agent-change-review-handoff.md  2026-07-19-conversational-continuity.md  2026-07-19-focused-git-action-overlay.md  2026-07-19-focused-git-promotion.md  2026-07-19-focused-git-rail-renderer.md  2026-07-19-git-agent-review-handoff.md  2026-07-19-git-command-hardening.md  2026-07-19-git-external-refresh.md  2026-07-19-git-hunk-review-and-helix-navigation.md  2026-07-19-git-interaction-accessibility.md  2026-07-19-git-surface-performance.md  2026-07-19-natural-language-intent-routing.md  2026-07-19-pi-sdk-streaming-and-interruption.md  2026-07-19-pi-transport-benchmark.md  2026-07-19-read-only-feature-investigation.md  2026-07-20-durable-active-plan.md  2026-07-21-adaptive-git-review-canvas.md  2026-07-21-agpl-license.md  2026-07-21-batched-code-review.md  2026-07-21-editable-code-review-draft.md  2026-07-21-homebrew-release-pipeline.md  2026-07-21-multi-place-plan-review.md  2026-07-21-open-source-foundation.md  2026-07-21-passive-review-return.md  (+5 more)
docs/decisions/: 001-helix-terminal-frontend.md  002-defer-sqlite-until-needed.md  003-trusted-workspace-default.md  004-pi-harness-hybrid-retrieval.md  005-lantern-owned-runtime-and-git-surface.md  006-promote-focused-git-rail.md
evaluations/: README.md  pyproject.toml  run_cold_grounding_status.py  run_external_edit_journey.py  run_live_trace.py  run_pi_quick_ask.py  run_retrieval_baseline.py  run_semantic_refresh.py  run_semantic_retrieval_spike.py
evaluations/datasets/code_review/: v1.json
evaluations/datasets/coding_journey/: v1.json
evaluations/datasets/external_edit/: v1.json
evaluations/datasets/intent_routing/: v1.json  v2.json  v3.json
evaluations/datasets/investigation/: v1.json
evaluations/datasets/live_trace/: v1.json
evaluations/datasets/plan_progress/: v1.json
evaluations/datasets/plan_review/: v1.json
evaluations/datasets/planning/: v1.json
evaluations/datasets/quick_ask/: v1.json  v2.json
evaluations/datasets/retrieval_baseline/: v1.json  v2.json  v3.json  v4.json  v5.json
evaluations/datasets/semantic_retrieval/: v1.json
evaluations/metrics/: __init__.py  contract.py
evaluations/tests/: test_code_review_contract.py  test_coding_journey_contract.py  test_external_edit_journey.py  test_intent_routing_contract.py  test_investigation_contract.py  test_live_trace.py  test_plan_progress_contract.py  test_plan_review_contract.py  test_planning_contract.py  test_quick_ask_contract.py  test_retrieval_baseline.py  test_semantic_retrieval_spike.py
fixtures/lsp-symbol/: Cargo.toml
frontend/helix/: README.md  prepare.sh  upstream.json
frontend/terminal/: Cargo.toml
frontend/terminal/src/: main.rs
packaging/: helix-grammars.txt  helix-runtime-manifest.txt
packaging/macos/: lantern  pi
packaging/pi/: package-lock.json  package.json
protocol/v10/: README.md  events.jsonl  requests.jsonl
protocol/v11/: README.md  events.jsonl  requests.jsonl
protocol/v12/: README.md  events.jsonl  requests.jsonl
protocol/v13/: README.md  events.jsonl  requests.jsonl
protocol/v14/: README.md  events.jsonl  requests.jsonl
protocol/v15/: README.md  events.jsonl  requests.jsonl
protocol/v16/: README.md  events.jsonl  requests.jsonl
protocol/v17/: README.md  events.jsonl  requests.jsonl
protocol/v2/: README.md  events.jsonl  requests.jsonl
protocol/v3/: README.md  events.jsonl  requests.jsonl
protocol/v4/: README.md  events.jsonl  requests.jsonl
protocol/v5/: README.md  events.jsonl  requests.jsonl
protocol/v6/: README.md  events.jsonl  requests.jsonl
protocol/v7/: README.md  events.jsonl  requests.jsonl
protocol/v8/: README.md  events.jsonl  requests.jsonl
protocol/v9/: README.md  events.jsonl  requests.jsonl
scripts/: benchmark-git-surfaces.mjs  benchmark-pi-transports.mjs  check.sh  launch-lantern.sh  package-macos.sh  render-homebrew-formula.sh  run-semantic-worker.sh  spike-pi-sdk-control.mjs  spike-pi-sdk-streaming.mjs
scripts/test/: helix-terminal-spike.test.mjs  open-source-foundation.test.mjs  (+2 more)
services/semantic-index/: README.md  pyproject.toml
services/semantic-index/lantern_semantic_index/: __init__.py  index.py  prepare.py  worker.py
services/semantic-index/tests/: test_index.py  test_worker.py
spikes/helix-terminal/runtime/: Cargo.toml
spikes/helix-terminal/runtime/src/: lib.rs
spikes/helix-terminal/runtime/tests/: protocol.rs
(+23 files in other folders)
