[workspace]
members = ["apps/daemon", "crates/diagnostics", "crates/policy-engine", "crates/protocol", "frontend/terminal"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
crossterm = "=0.28.1"
lantern-protocol = { path = "crates/protocol" }
lantern-policy-engine = { path = "crates/policy-engine" }
lantern-diagnostics = { path = "crates/diagnostics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
