[workspace]
members = ["apps/daemon", "apps/explorer", "apps/git-rail", "crates/diagnostics", "crates/protocol", "frontend/terminal"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false
rust-version = "1.96"
license = "AGPL-3.0-only"
repository = "https://github.com/e7nt/lantern"

[workspace.dependencies]
crossterm = "=0.28.1"
lantern-protocol = { path = "crates/protocol" }
lantern-diagnostics = { path = "crates/diagnostics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
