[project]
name = "lantern-evaluations"
version = "0.1.2"
description = "Local behavioral evaluations for Lantern model flows"
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "deepeval==4.0.9",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "ruff==0.15.21",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
