[package]
name = "lantern-daemon"
version = "0.1.1"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lantern-diagnostics.workspace = true
lantern-protocol.workspace = true
serde_json.workspace = true

[lints]
workspace = true
