[package]
name = "lantern-git-rail"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossterm.workspace = true
lantern-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
