[package]
name = "lantern-terminal"
version = "0.1.4"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossterm.workspace = true
lantern-diagnostics.workspace = true
lantern-protocol.workspace = true
serde_json.workspace = true

[lints]
workspace = true
