[project]
name = "lantern-semantic-index"
version = "0.1.3"
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastembed==0.8.0",
  "numpy==2.4.3",
  "onnxruntime==1.23.2",
  "tree-sitter-language-pack==1.12.5",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.6",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
