[package]
name = "lantern-terminal-spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crossterm = "=0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "lantern-spike-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "lantern-spike-pane"
path = "src/bin/pane.rs"
